Complete the conversion of the loader unit test to a functional test.

--- a/tests-intern/functional/_base/loader/config/test.html
+++ b/tests-intern/functional/_base/loader/config/test.html
@@ -48,7 +48,7 @@
             },
             deps: [],
             callback: function () {
-                parent.loaderTestDfd.resolve();
+                window.ready = true;
             }
         };
     </script>
