--- a/tests-intern/functional/_base/loader/requirejs/simple-badbase.html
+++ b/tests-intern/functional/_base/loader/requirejs/simple-badbase.html
@@ -3,15 +3,13 @@
     <title>require.js: Simple Bad Base Test</title>
     <base href="http://some.example.com/path/"/>
     <script type="text/javascript">
+        this.testBase = this.location.href.replace(/\/loader\/requirejs\/simple-badbase\.html.*$/, '');
         document.write('<scr' + 'ipt type="text/javascript" src="' +
-                parent.loaderTestBaseUrl + '/loader/requirejs/requirejs-setup.js' +
+                testBase + '/loader/requirejs/requirejs-setup.js' +
                 '"><' + '/script>');
         document.write('<scr' + 'ipt type="text/javascript" src="' +
-                parent.loaderTestBaseUrl + '../../../../dojo.js' +
+                testBase + '/../../../dojo.js' +
                 '"><' + '/script>');
-    </script>
-    <script>
-        parent.loaderTestDfd.resolve();
     </script>
 </head>
 <body>
